# RemoteObjectDetector

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.625341e.4.8-pre1  CMakeLists.txt.user.c79f26a  Dockerfile  README.md  builder  cleaner  main.cpp
Apps/: CMakeLists.txt
Apps/CalculationServer/: CMakeLists.txt
Apps/ComputingServer/: CMakeLists.txt
Apps/ComputingServer/src/: main.cpp
Apps/DataServer/: CMakeLists.txt
Apps/DataServer/src/: main.cpp
Apps/DetectorControlServer/: CMakeLists.txt
Apps/DetectorControlServer/src/: main.cpp
Apps/DetectorEndpoint/: CMakeLists.txt
Apps/DetectorEndpoint/resources/: test_resources.qrc
Apps/DetectorEndpoint/src/: main.cpp
Apps/DetectorEndpoint/src/camera/: cameraadaptor.cpp  cameraadaptor.hpp
Apps/DetectorEndpoint/src/endpoint/: detectorendpoint.cpp  detectorendpoint.hpp  eventendpoint.cpp  eventendpoint.hpp  servercommandprocessor.cpp  servercommandprocessor.hpp
Apps/DetectorEndpoint/src/streamer/: imagestreamer.cpp  imagestreamer.hpp
Apps/DetectorEndpoint/src/ws/: client.cpp  client.hpp
Apps/ManagePanel/: CMakeLists.txt
Apps/ManagePanel/src/: main.cpp
Apps/Server/: CMakeLists.txt
Apps/Server/src/: main.cpp
ComponentsSystem/: CMakeLists.txt
ControlGUI/: CMakeLists.txt  ControlGUI.pro  controlgui_plugin_import.cpp
ControlGUI/src/: commonstructs.h  src.pri
ControlGUI/src/GUI/: controlserver.cpp  controlserver.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_guisignals.cpp  mainwindow_serversignals.cpp
ControlGUI/src/Server/: connectionworker.cpp  connectionworker.h  exchangepacket.h  packetprocessor.cpp  packetprocessor.h  tcpserverinstance.cpp  tcpserverinstance.h  threadmanager.cpp  threadmanager.h
DATA/database/: 2026-03-25_12-16_v0.sql  2026-03-25_12-20_v0.sql  2026-03-25_12-33_v0.sql  2026-03-25_12-38_v0.sql  2026-03-26_23-20_v0.sql  2026-03-26_23-26_v0.sql  2026-03-27_11-17_v1.sql  2026-04-22_02-37_v1.txt
DATA/pipeline/: checkWork.sh
Documentation/: ARCH_DetectorEndpoint.drawio  ARCH_ManagementPanel.drawio  CONFIG_EXAMPLE_DetectorEndpoint.ini  DB_Structure.drawio  UDP_packetStructure.txt
Documentation/extra/: HTTP_codes.txt
Legacy/ControlGUI/src/: commonstructs.h
Legacy/ServerApp/: CMakeLists.txt
Legacy/ServerApp/src/: deviceclient.cpp
Legacy/ServerApp/src/Client/: packetprocessor.cpp  packetprocessor.hpp
Legacy/ServerApp/src/Images/: analysesubsystem.cpp  cameraadaptor.cpp
Libraries/: CMakeLists.txt
Libraries/DataObjects/: CMakeLists.txt
Libraries/DataObjects/src/: detectionobject.cpp  detectionobject.hpp  detectorconfiguration.cpp  detectorconfiguration.hpp  devicestatus.cpp  devicestatus.hpp  error.cpp  error.hpp  includeall.hpp  serializableobject.cpp  serializableobject.hpp  typedefinitions.hpp  types.cpp  types.hpp
Libraries/Exchange/: CMakeLists.txt
Libraries/Exchange/src/: httpconstants.hpp  imagepacket.cpp  imagepacket.hpp  sendableimage.hpp
Libraries/Exchange/tests/: test_imagepacket.cpp  test_udptransfer.cpp
Libraries/ImageProcessing/: CMakeLists.txt
Libraries/ImageProcessing/include/ROD/: CameraAdaptor.h  ImageProcessing.h  ImageProcessingUtility.h
Libraries/ImageProcessing/include/ROD/ImageProcessing/: CameraAdaptor.h  Common.h  ImageProcessor.h  Utility.h  VideoReader.h
Libraries/ImageProcessing/src/: analysemethodmanager.cpp  analysemethodmanager.hpp  analysesubsystem.cpp  analysesubsystem.hpp  common.cpp  common.hpp  imagemanipulationinterface.cpp  imagemanipulationinterface.hpp  imageprocessor.cpp  imageprocessor.hpp  imagereceiver.cpp  imagereceiver.hpp  typesholder.hpp  utility.cpp  utility.hpp  videoreader.cpp  videoreader.hpp
Libraries/ImageProcessing/src/camera/: cameraadaptor.cpp  cameraadaptor.hpp
Libraries/ImageProcessing/tests/: test_utility.cpp
Libraries/Protocol/: CMakeLists.txt
Libraries/Protocol/src/: datastructures.cpp  datastructures.hpp  eventprocessor.cpp  eventprocessor.hpp  events.cpp  events.hpp  httpconstants.cpp  httpconstants.hpp  imagepacket.cpp  imagepacket.hpp  sendableimage.cpp  sendableimage.hpp  types.cpp  types.hpp  udppacket.cpp  udppacket.hpp
Libraries/Protocol/tests/: test_imagepacket.cpp  test_udptransfer.cpp
Libraries/Servers/: CMakeLists.txt
Libraries/Servers/src/: abstractendpoint.hpp  constants.hpp  controllerbase.cpp  controllerbase.hpp  eventprocessor.hpp
Notes/: ARCH_ManagementPanel.drawio  ARCH_Server.drawio
ServerApp/src/Client/: exchangepacket.hpp  tcpclientinstance.cpp  tcpclientinstance.hpp
ServerApp/src/Images/: analysemethodmanager.hpp  common.hpp  imagemanipulationinterface.hpp  (+1 more)
Test images/subjects/: moon_img.xcf
database/: 0.sql  2026-03-25_12-26_v0.sql  2026-03-25_12-35_v0.sql  2026-03-26_23-18_v0.sql  2026-03-27_00-28_v0.sql  2026-03-27_10-28_v0.sql  setup_database.sh
docker/: Dockerfile_DetectorControlService  docker-compose.yml  startTestDb.sh
docker/nginx/: nginx.conf
inc/: exchange.h  server.h
materials/: notes.txt
materials/image_templates/: moon_img.xcf
src/: appsetup.cpp  appsetup.hpp  cameradriver.cpp  cameradriver.h  common.cpp  common.hpp  deviceclient.cpp  deviceclient.hpp  imageconverter.h  imageprocessor.cpp  imageprocessor.h  interface.cpp  interface.h  logging.cpp  logging.hpp  main.cpp  statusfunctions.cpp  statusfunctions.hpp
src/Client/: exchangepacket.hpp  tcpclientinstance.cpp  tcpclientinstance.hpp
src/Images/: analysemethodmanager.cpp  analysemethodmanager.hpp  analysesubsystem.cpp  analysesubsystem.hpp  cameraadaptor.cpp  cameraadaptor.hpp  cameradriver.cpp  cameradriver.h  cameradriver.hpp  common.cpp  common.hpp  commonsubfunctions.cpp  imagecomparator.cpp  imagecomparator.hpp  imagemanipulationinterface.cpp  imagemanipulationinterface.hpp  imageprocessor.cpp  imageprocessor.h  imageprocessor.hpp  imagetemplate.cpp  imagetemplate.hpp  interface.cpp  objectdetector.cpp  objectdetector.hpp  opencvimage.cpp  opencvimage.hpp  typesholder.cpp  typesholder.hpp
src/System/: mainapp.cpp  mainapp.hpp  message.hpp  module.cpp  module.hpp  moduleconfiguration.hpp
src/study/: studyclass.cpp  studyclass.h
(+238 files in other folders)
