add_subdirectory(Components-CMake)
add_subdirectory(Components-Core)
add_subdirectory(Components-Logger)
add_subdirectory(Components-Common)
add_subdirectory(Components-ExtraClasses)
add_subdirectory(Components-Encryption)
add_subdirectory(Components-Filework)
add_subdirectory(Components-Database)
add_subdirectory(Components-SystemProcessing)
add_subdirectory(Components-Thread)
add_subdirectory(Components-Network)
