if (NOT ROD_BUILD_DETECTOR)
    message(STATUS "Detector build disabled")
    return()
endif()

set(APP_TARGET_NAME ROD-DetectorEndpoint)

COMPONENTS_CCR_FIND_LIBRARY(OpenCV)

COMPONENTS_CCR_CONFIGURE_APP(${APP_TARGET_NAME} ${CMAKE_CURRENT_LIST_DIR}
    boost_system
    boost_program_options
    crypto
    ssl
)

COMPONENTS_LINK_COMPONENT(${APP_TARGET_NAME} Logger)
COMPONENTS_LINK_COMPONENT(${APP_TARGET_NAME} Common)
COMPONENTS_LINK_COMPONENT(${APP_TARGET_NAME} Network)
COMPONENTS_LINK_COMPONENT(${APP_TARGET_NAME} ExtraClasses)

set(ROD_LIBRARIES_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries)
COMPONENTS_CCR_LINK_LIBRARY(${APP_TARGET_NAME} DataObjects ${ROD_LIBRARIES_ROOT}/DataObjects)
COMPONENTS_CCR_LINK_LIBRARY(${APP_TARGET_NAME} ImageProcessing ${ROD_LIBRARIES_ROOT}/ImageProcessing)
COMPONENTS_CCR_LINK_LIBRARY(${APP_TARGET_NAME} Exchange ${ROD_LIBRARIES_ROOT}/Exchange)
COMPONENTS_CCR_LINK_LIBRARY(${APP_TARGET_NAME} Servers ${ROD_LIBRARIES_ROOT}/Servers)

if (websocketpp_SOURCE_DIR)
    target_include_directories(${APP_TARGET_NAME} PRIVATE ${websocketpp_SOURCE_DIR})
endif()

FILE(GLOB_RECURSE APP_DATA_FILES "${ROD_DATA_ROOT}/${APP_TARGET_NAME}/*")
install(FILES
    ${APP_DATA_FILES}
    DESTINATION "${APP_TARGET_NAME}/data"
)
